# docsend-dl

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/docsend_dl/: __init__.py  __main__.py  assembler.py  cli.py  downloader.py  extractor.py
tests/: reference_checksums.json  test_assembler.py  test_email_gate.py  test_integration.py  test_pdf_path_resolution.py  test_url_validation.py
