[project]
name = "docsend-dl"
version = "0.1.0"
description = "Download slides from public DocSend decks as PNG images"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Corey Gallon", email = "366332+captivus@users.noreply.github.com" }
]
keywords = ["docsend", "slides", "download", "presentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "img2pdf>=0.6.3",
    "playwright>=1.58.0",
]

[project.scripts]
docsend-dl = "docsend_dl.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = ["integration: tests that require network access and Playwright"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
